# SimpleGames

./: .gitignore
backend/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/tictactoe/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tictactoe/migrations/: 0001_initial.py  0002_alter_gamelist_game_date.py  0003_alter_gamelist_user.py  0004_remove_gamelist_pos_index.py  0005_gamelist_user_pk.py  0006_gamelist_winner_cells.py  0007_auto_20230624_1308.py  0008_alter_gamelist_user.py
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: Cell.vue  NavBar.vue  OldField.vue  Pagination.vue  RadioButtons.vue  SwitchGameModal.vue  TicTacToe.vue  UniModal.vue
frontend/src/helpers/: logic.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/: tictactoe.js
frontend/src/views/: FieldView.vue  HomeView.vue  OldFieldsView.vue  ScoresView.vue  TicTacToeView.vue
